@@ -8,6 +8,7 @@ Improvements
 - daf module: add daf.clear() (!1114)
 - dnstap module: more features and don't log internal requests (!1103)
 - randomize record order by default, i.e. reorder_RR(true) (!1123)
+- avoid excessive logging of UDP replies with sendmmsg (!1138)
 
 Bugfixes
 --------
